<resources>
    <string name="app_name">WaiterPOC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Useful strings -->
    <string name="debug">Debug</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- Errors strings -->
    <string name="unknown_error">An unknown error happened, please try again later</string>
    <string name="unknown_error_short">An unknown error happened</string>
    <string name="no_internet">No internet connection</string>
    <string name="error_event">Event error</string>
    <string name="no_events">There are no events at the moment.</string>
    <string name="no_waiters">No waiters registered at this event.</string>

    <!-- Placeholder strings -->
    <string name="placeholder_firstname">Firstname</string>
    <string name="placeholder_name">Firstname Name</string>
    <string name="placeholder_email">email@domain.com</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nunc congue aliquam elit eu lacinia. Interdum et malesuada fames ac ante ipsum
        primis in faucibus.</string>
    <string name="placeholder_date">Date</string>
    <string name="placeholder_address">Address</string>
    <string name="placeholder_event_name">eventName</string>
    <string name="placeholder_event_address">address</string>
    <string name="placeholder_event_date">date</string>

    <!-- SharedPreferences file names -->
    <string name="preference_settings">com.waiter.waiter.poc.SP_SETTINGS</string>

    <!-- Navigation Drawer entry -->
    <string name="navigation_drawer_profile">Profile</string>
    <string name="navigation_drawer_events">Events</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="navigation_drawer_share">Share</string>
    <string name="navigation_drawer_send">Send</string>
    <string name="navigation_drawer_debugging">Debugging</string>
    <string name="navigation_drawer_about">About Waiter</string>
    <string name="action_settings">Settings</string>

    <!-- App top bar | menu > main.xml  -->
    <string name="menu_refresh">Refresh</string>

    <!-- Strings related to Login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password must be between 6 and 20 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="license_agreement">I have read, and agree the license agreement.</string>
    <string name="no_account_yet">No account yet? Join us!</string>
    <string name="signin_failed_title">Sign In Failed</string>
    <string name="signin_failed_message">Invalid email or password</string>

    <!-- Strings related to Signup -->
    <string name="prompt_firstName">First name</string>
    <string name="prompt_lastName">Last name</string>
    <string name="prompt_repeat_password">Repeat your password</string>
    <string name="no_match">Password doesn\'t match</string>
    <string name="action_sign_up">Create account</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="already_member">Already a member? Login</string>
    <string name="signup_failed_title">Registration Failed</string>
    <string name="signup_failed_email">Email address already used</string>

    <!-- Strings related to WaiterFragment -->
    <string name="request_waiter">Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_loading_popup">LoadingPopup</string>
    <!--<string name="section_format">Hello World from section: %1$d</string>-->

</resources>
