<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Debug">
        <menu>
            <item
                android:id="@+id/nav_debugging"
                android:icon="@drawable/ic_bug_report_black_48dp"
                android:title="@string/navigation_drawer_debugging" />
        </menu>
    </item>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/navigation_drawer_profile" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_black_48dp"
            android:title="@string/navigation_drawer_events" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/navigation_drawer_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_48dp"
            android:title="@string/navigation_drawer_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_drawer_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_drawer_send" />
        </menu>
    </item>

</menu>
